--- a/content/手足球系統模擬.html
+++ b/content/手足球系統模擬.html
@@ -155,11 +155,138 @@ img {
     <div id="tipue_search_content">執行規劃 << <a href='執行規劃.html'>Previous</a> <a href='設計與繪圖.html'>Next</a> >> 設計與繪圖<br /><h1>手足球系統模擬</h1>
 <h4><strong>BG1</strong></h4>
 <p>專案成果摘要</p>
+<p><span>我們這學期是做手足球的模擬，用 onshape 做協同設計，將繪製好的立體圖檔轉成 STL，丟到 vrep 進行動態模擬。我們對 " 人對人 "，" 人對電腦 "， " 電腦對電腦 " 及 " 送球機構 " 的模擬寫程式，使得手足球對打都能順利地模擬，送球機構採用升降台進行送球運動，在 vrep 模擬上也遇到了不少問題，花了很多時間去嘗試，最後也有將球順利送回球場上。</span></p>
 <p>專案執行動機</p>
+<p><span>如果我們要製作一個實體的手足球，在實際製作過程中可能會遇到一些問題，例如尺寸上或是組合有一些不如預期的狀況，或是有要修改零件的地方，做出實體再做更改肯定會花更多時間，因此我們可以運用 vrep，在虛擬的地方模擬實際的情況，遇到狀況時只要修改設計圖並再次模擬就行了，這樣可以減少製作實體的時間，還不用浪費材料，可說是一舉兩得。</span></p>
 <p>相關文獻探討</p>
+<p><a href="https://en.wikipedia.org/wiki/Onshape">Onshape introduction</a></p>
+<p><a href="http://hades.mech.northwestern.edu/index.php/V-REP_Introduction">V-rep introduction</a></p>
+<p><a href="https://zh.wikipedia.org/wiki/GitHub">Github introduction</a></p>
 <p>專案執行成員</p>
+<table border="1" style="border-color: #95e2f0; width: 528.2px;">
+<tbody>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;"><strong>Leader</strong></td>
+<td style="text-align: center; width: 320.2px; height: 47px;">
+<pre class="tw-data-text tw-ta tw-text-large" data-placeholder="翻譯" dir="ltr" id="tw-target-text"><strong><span lang="en">Assignments</span></strong></pre>
+</td>
+</tr>
+<tr style="height: 141px;">
+<td style="text-align: center; width: 207px; height: 141px;">
+<p>40623203</p>
+<p>蔡宜芳</p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 141px;">
+<p>執行規劃</p>
+<p>V-rep  人對人模擬和程式</p>
+<p><span>V-rep  送球機構模擬和程式</span></p>
+</td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;"><strong>Member</strong></td>
+<td style="text-align: center; width: 320.2px; height: 47px;">
+<pre class="tw-data-text tw-ta tw-text-large" data-placeholder="翻譯" dir="ltr" id="tw-target-text"><strong><span lang="en">Assignments</span></strong></pre>
+</td>
+</tr>
+<tr style="height: 139px;">
+<td style="text-align: center; width: 207px; height: 139px;">
+<p>40623206</p>
+<p>邱妍蓁</p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 139px;">
+<p>Onshape 繪製手足球台跟抬球機構</p>
+<p>爆炸圖</p>
+</td>
+</tr>
+<tr style="height: 139px;">
+<td style="text-align: center; width: 207px; height: 139px;">
+<p>40623211</p>
+<p><span>王得榮</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 139px;">
+<p>標註送球機構的圖面</p>
+<p>PDF</p>
+</td>
+</tr>
+<tr style="height: 140.6px;">
+<td style="text-align: center; width: 207px; height: 140.6px;">
+<p>40623212</p>
+<p><span>魏有泉</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 140.6px;">零件表</td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;">
+<p>40623216</p>
+<p><span>楊士平</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 47px;"><span>標註手足球的圖面</span></td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;">
+<p>40623221</p>
+<p><span>蔡和勳</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 47px;">投影片</td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;">
+<p>40623222</p>
+<p><span>蔡博淮</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 47px;">尺寸分析</td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;">
+<p>40623228</p>
+<p><span>陳永錩</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 47px;">
+<p><span>V-rep  人對電腦模擬和程式</span></p>
+</td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;">
+<p>40623233</p>
+<p><span>謝宗宏</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 47px;"><span>V-rep  人對電腦模擬和程式</span></td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;">
+<p>40623240</p>
+<p><span>何冠均</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 47px;">PDF</td>
+</tr>
+<tr style="height: 47px;">
+<td style="text-align: center; width: 207px; height: 47px;">
+<p>40623245</p>
+<p><span>練峪愷</span></p>
+</td>
+<td style="text-align: center; width: 320.2px; height: 47px;">
+<p>標註送球機構的圖面</p>
+<p>PDF</p>
+</td>
+</tr>
+</tbody>
+</table>
 <p>執行使用套件</p>
+<p>Onshape：</p>
+<p><b>Onshape</b><span> </span>is a<span> </span><a href="https://en.wikipedia.org/wiki/Computer-aided_design" title="Computer-aided design">computer-aided design</a><span> </span>(CAD)<span> </span><a href="https://en.wikipedia.org/wiki/Software" title="Software">software</a><span> </span>system, delivered over the Internet via a<span> </span><a class="mw-redirect" href="https://en.wikipedia.org/wiki/Software_as_a_Service" title="Software as a Service">Software as a Service</a><span> </span>(SAAS) model. It makes extensive use of<span> </span><a href="https://en.wikipedia.org/wiki/Cloud_computing" title="Cloud computing">cloud computing</a>, with compute-intensive processing and<span> </span><a href="https://en.wikipedia.org/wiki/Rendering_(computer_graphics)" title="Rendering (computer graphics)">rendering</a><span> </span>performed on<span> </span><a href="https://en.wikipedia.org/wiki/Internet" title="Internet">Internet</a>-based<span> </span><a href="https://en.wikipedia.org/wiki/Server_(computing)" title="Server (computing)">servers</a>, and users are able to interact with the system via a<span> </span><a href="https://en.wikipedia.org/wiki/Web_browser" title="Web browser">web browser</a><span> </span>or the<span> </span><a href="https://en.wikipedia.org/wiki/IOS" title="IOS">iOS</a><span> </span>and<span> </span><a href="https://en.wikipedia.org/wiki/Android_(operating_system)" title="Android (operating system)">Android</a><span> </span>apps.</p>
+<p>Onshape allows teams to collaborate on a single shared design, the same way multiple writers can work together editing a shared document via cloud services.<span> </span>It is primarily focused on mechanical CAD (MCAD) and is used for product and machinery design across many industries, including<span> </span><a href="https://en.wikipedia.org/wiki/Consumer_electronics" title="Consumer electronics">consumer electronics</a>, mechanical<span> </span><a class="mw-redirect" href="https://en.wikipedia.org/wiki/Machinery" title="Machinery">machinery</a>,<span> </span><a class="mw-redirect" href="https://en.wikipedia.org/wiki/Medical_devices" title="Medical devices">medical devices</a>,<span> </span><a href="https://en.wikipedia.org/wiki/3D_printing" title="3D printing">3D printing</a>, machine parts, and industrial equipment.</p>
+<p>Onshape upgrades are released directly to the web interface, and the software does not require maintenance work from the user.</p>
+<p>Founded in 2012, Onshape is based in<span> </span><a href="https://en.wikipedia.org/wiki/Cambridge,_Massachusetts" title="Cambridge, Massachusetts">Cambridge, Massachusetts</a><span> </span>(USA), with offices in<span> </span><a href="https://en.wikipedia.org/wiki/Singapore" title="Singapore">Singapore</a><span> </span>and<span> </span><a class="mw-redirect" href="https://en.wikipedia.org/wiki/Pune,_India" title="Pune, India">Pune, India</a>.<span> </span>Its leadership team includes several engineers and executives who originated<span> </span><a href="https://en.wikipedia.org/wiki/SolidWorks" title="SolidWorks">SolidWorks</a>, a popular 3D CAD program that runs on Windows computers.<span> </span>Onshape’s co-founders include two former SolidWorks CEOs,<span> </span><a href="https://en.wikipedia.org/wiki/Jon_Hirschtick" title="Jon Hirschtick">Jon Hirschtick</a><span> </span>and John McEleney.</p>
+<p>V-rep：</p>
+<ol>
+<li>V-REP provides a unified framework combining many powerful internal and external libraries that are often useful for robotics simulations. This includes dynamic simulation engines, forward/inverse kinematics tools, collision detection libraries, vision sensor simulations, path planning, GUI development tools, and built-in models of many common robots</li>
+<li>V-REP is highly extensible. V-REP developers provide an API that allows one to write custom plugins that add new features. You can embed<span> </span><a class="external text" href="https://en.wikipedia.org/wiki/Lua_(programming_language)" rel="nofollow">Lua</a><span> </span>scripts directly into a simulation scene that, for example, process simulated sensor data, run control algorithms, implement user interfaces, or even send data to a physical robot. They also provide a remote API that allows one to develop standalone applications in many programming languages that are able to pass data in and out of a running V-REP simulation.</li>
+</ol>
+<p>Github：</p>
+<p><b>GitHub</b>是透過<a href="https://zh.wikipedia.org/wiki/Git" title="Git">Git</a>進行<a href="https://zh.wikipedia.org/wiki/%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6" title="版本控制">版本控制</a>的軟體原始碼代管服務平台，由GitHub公司（曾稱Logical Awesome）的開發者Chris Wanstrath、PJ Hyett和Tom Preston-Werner使用<a href="https://zh.wikipedia.org/wiki/Ruby_on_Rails" title="Ruby on Rails">Ruby on Rails</a>編寫而成。</p>
+<p>GitHub同時提供付費帳戶和免費帳戶。這兩種帳戶都可以建立公開或私有的程式碼倉庫，但付費用戶支援更多功能。根據在2009年的Git用戶調查，GitHub是最流行的Git存取站點。除了允許個人和組織建立和存取保管中的程式碼以外，它也提供了一些方便社會化共同軟體開發的功能，即一般人口中的社群功能，包括允許用戶追蹤其他用戶、組織、軟體庫的動態，對軟體程式碼的改動和bug提出評論等。GitHub也提供了圖表功能，用於概觀顯示開發者們怎樣在程式碼庫上工作以及軟體的開發活躍程度。</p>
 <p>專案執行過程規劃</p>
+<p><span>尋找資料 --&gt; 分配工作 --&gt; 執行各自工作 --&gt; 與各組員討論問題 --&gt; 實踐想法 --&gt;  Onshape 組合 </span><span>--&gt; V-rep 模擬 --&gt; lua 程式撰寫 --&gt; 製作 PDF --&gt;完成</span></p>
 <p>專案執行內容</p>
 <p>專案結論</p>
 <hr/>
